# example_project

./: README.md  pyproject.toml
example_package_bm99/: time_series_analysis.py
tests/: test_TimeSeriesAnalysis.py
