[build-system]
requires = ["hatchling >= 1.26", "numpy >= 2.3"]
build-backend = "hatchling.build"

[project]
name = "example_pacakge_bm99"
version = "0.0.1"
authors = [
  { name="Hao", email="chunhaoc777@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["numpy >= 2.3"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"